# uni-agent

./: .env.example  .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
.uni-agent/runs/: 1c7dd84cda2b.json  71c6671f7646.json  7782ae7482b9.json  8cd71639f277.json  94dbd782c8e9.json  b4b95d22a8cf.json  c89038cfde35.json  d135b263afa8.json  d75db10ab212.json  da77272a6c16.json  e97caac61e25.json  f5aac0b92a5f.json  f8052091d182.json
docs/: AgentEval轻量评测体系.md  AgentLoop硬化开发计划.md  Agent研发预研与最佳实践.md  Agent运行流程与领域模型.md  Skills目录与SKILL说明.md  SubAgent分阶段实施报告.md  sdk-agents.md  sdk-concurrency.md  sdk-runtime.md  sdk-streaming.md  uni-agent差距分析与改进计划.md  开发文档.md  设计文档.md  进度文档.md
docs/cases/: 2026-04-15-interactive-client-skill-token-query-positive.md  2026-04-17-interactive-client-readme-git-status-positive.md  design-trigger-subagent-delegate-task.md
examples/: agents.example.yaml  sdk_concurrency.py  sdk_minimal.py  sdk_multi_agent.py  sdk_orchestrator_escape.py
skills/code-runner/: SKILL.md
skills/general-assistant/: prompt.md  skill.yaml
skills/web-search/: SKILL.md
src/uni_agent/: __init__.py  bootstrap.py
tests/integration/: test_agent_run.py  test_delegate_integration.py  test_sdk_contract.py
tests/unit/: test_builtins_write_fetch.py  test_cli_replay.py  test_client_session.py  test_command_lookup.py  test_context_budgets.py  test_context_digests.py  test_delegate_task.py  test_docs_sdk_agents.py  test_docs_sdk_concurrency.py  test_docs_sdk_runtime.py  test_docs_sdk_streaming.py  test_evals.py  test_executor.py  test_goal_check_orchestrator.py  (+37 more)
(+77 files in other folders)
